# linqxx

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: linqxxConfig.cmake.in
demo/: CMakeLists.txt  main.cpp
include/: enumerable.hpp  group_enumerable.hpp  groupby_enumerable.hpp  iterator.hpp  linqxx.hpp  select_enumerable.hpp  selectmany_enumerable.hpp  stl_enumerable.hpp  where_enumerable.hpp
source/: test.cpp
